--- a/src/Screens/Login/Login.css
+++ b/src/Screens/Login/Login.css
@@ -6,9 +6,30 @@
   box-sizing: border-box;
 }
 
+/* Estilos para el scroll */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.6);
+}
+
 body {
+    font-family: 'Poppins', sans-serif;
   background-color: #080710!important;
 }
+
+
 
 .background {
   width: 430px;
