--- a/src/Screens/Login/Login.css
+++ b/src/Screens/Login/Login.css
@@ -25,11 +25,9 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-  background-color: #080710!important;
+  font-family: "Poppins", sans-serif;
+  background-color: #080710 !important;
 }
-
-
 
 .background {
   width: 430px;
@@ -53,13 +51,12 @@ body {
   top: -80px;
 }
 
-.shape{
+.shape {
   background: linear-gradient(to right, #ff512f, #f09819);
   right: -30px;
   bottom: -80px;
 }
-
-form {
+.background form {
   height: 520px;
   width: 400px;
   background-color: rgba(255, 255, 255, 0.13);
@@ -74,15 +71,15 @@ form {
   padding: 50px 35px;
 }
 
-form * {
-  font-family: 'Poppins', sans-serif;
+.background form * {
+  font-family: "Poppins", sans-serif;
   color: #ffffff;
   letter-spacing: 0.5px;
   outline: none;
   border: none;
 }
 
-form h3 {
+.background form h3 {
   font-size: 32px;
   font-weight: 500;
   line-height: 42px;
@@ -91,14 +88,14 @@ form h3 {
   margin-bottom: 30px; /* Agregado un margen inferior */
 }
 
-label {
+.background label {
   display: block;
   margin-top: 30px;
   font-size: 16px;
   font-weight: 500;
 }
 
-input {
+.background input {
   display: block;
   height: 50px;
   width: 100%;
@@ -114,7 +111,7 @@ input {
   color: #e5e5e5;
 }
 
-button {
+.background button {
   margin-top: 50px;
   width: 100%;
   background-color: #ffffff;
@@ -155,4 +152,9 @@ button {
   margin-right: 4px;
 }
 
-
+.social a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
+  text-align: center;
+}
