--- a/src/Screens/Home/Home.css
+++ b/src/Screens/Home/Home.css
@@ -6,6 +6,18 @@
   padding: 0 20px;
 }
 
+.container button {
+  margin-top: 50px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 .carousel-section {
   padding: 40px 0;
 }
@@ -38,7 +50,6 @@
   margin: 0;
   opacity: 0.8;
 }
-
 
 .carousel .control-arrow {
   display: none !important;
@@ -122,7 +133,6 @@
   transform: scale(0.95);
 }
 
-.div-right{
+.div-right {
   text-align: justify;
 }
-
